# AoC-2024

./: Cargo.toml  dune-project
src/: lib.rs
src/01/: main.rs
src/02/: main.rs
src/03/: input_3.txt  main.rs
src/04/: main.rs
src/05/: input_4.txt  main.rs
src/06/: main.rs
src/07/: main.rs
src/08/: main.rs
src/09/: main.rs
src/10/: main.rs
src/11/: main.rs
src/12/: input_5.txt  main.rs
