(lang dune 3.17)

(name aoc_2024)

(generate_opam_files true)

(source
 (github MichaelVrana/AoC-2024))

(authors "Michael Vrána")

(package
 (name aoc_2024)
 (depends ocaml)
 (tags
  ("Advent of Code 2024")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
